# NativeFramework

./: .gitignore  .gitmodules  ElecDev_Graphics_Application.sln  README.md  READMEOLD.md  kil.txt
API/: Example.py
Dependencies/ImGUI/: imgui_impl_glfw.cpp
Documentation/: (0) Prelude.md  (2) Engines.md  (3) UI.md  (4) Commands.md  README.md
ElecDev_Graphics_Application/: ElecDev_Graphics_Application.vcxproj  ElecDev_Graphics_Application.vcxproj.filters  imgui.ini  resourceHandler.aps
ElecDev_Graphics_Application/Documentation/: (0) Prelude.md  (1) Renderer.md  (2) Engines.md  (3) UI.md  README.md
ElecDev_Graphics_Application/Source/: GUIState.h  Handlers.h  Lumen.cpp  Lumen.h  Main.cpp  Preprocessor.h  PythonInterface.cpp  PythonInterface.h  README.md  main.cpp  mainApplication.cpp  openGL_GLFW_ImGUI_Example.cpp  stateMachine.h
ElecDev_Graphics_Application/Tests/FreeList/: CMakeLists.txt  FreeList.h  Profiler.cpp  main.cpp
Font_Generation/: Arial_Normal.fnt
Font_Generation/Heiro/: Arial_SDF_Min.fnt
Python/: Example.py  Lumen.py  Testing.py
Resources/: resourceHandler.cpp
Resources/Shaders/GLSL/: basicShader.glsl  (+1 more)
Source/: Main.cpp
Source/Application/: Application.cpp  Application.h  ApplicationEvents.cpp  ApplicationGLFWWindow.cpp  ApplicationRender.cpp
Source/Lumen/: Lumen.cpp
Tests/Profiler/: Profiler.h
WebSocketsExample/: Lumen.py  LumenLua.py  QuadColor.lua  Testing.py  WebSocketClient.py
enc_temp_folder/1222af6c37c141615293a47c31c4ea7/: VertexArrayObjectGL.cpp
enc_temp_folder/157855fcfdc4a6e97cf383a26f135be/: GraphicsScene.cpp
(+650 files in other folders)
